# RAG_against_the_machine

./: .gitignore  Makefile  README.md  pyproject.toml  test.txt
data/output/search_results/: dataset_docs_public.json
data/processed/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/: __main__.py
src/answer/: answer.py
src/chunker/: chunker.py
src/evaluation/: evaluation.py
src/indexer/: indexer.py
src/search/: search.py
src/validation/: validation.py
student/: __main__.py
