[project]
name = "RAG"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "langchain_text_splitters>=1.1.2",
    "bm25s>=0.3.9",
    "transformers>=5.9.0",
    "torch>=2.12.0",
    "fire>=0.4.0"
]